# ub-fsw-server

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
auth/models/: index.py
auth/router/: index.py
auth/utils/: jwt.py
digit_classifier/clients/: hf_client.py
digit_classifier/model/: network.py  preprocess.py
digit_classifier/routes/: router.py
digit_classifier/services/: service.py  voting_service.py
docs/: git_hand_book.md
tests/: conftest.py  test_dc_api.py
