[project]
name = "ub-fsw-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=5.0.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "huggingface-hub>=0.35.3",
    "pillow>=12.0.0",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "pytest-flask>=1.3.0",
    "python-dotenv>=1.1.1",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]
